--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "big-number": "^2.0.0",
+    "bignumber.js": "^9.1.0",
     "core-js": "^3.8.3",
     "ethers": "^5.7.2",
     "vue": "^2.6.14",
