--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ethers": "^5.7.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-toastify": "^1.8.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
